@@ -15,6 +15,7 @@ Changes:
 - Add samba local group.
 - Add ability to add tap device on bridge interface.
 - Remove usesendfile on CIFS/SMB.
+- Change ZFS pool info reflected from zpool list.
 - Upgrade bash 4.3 to patch 42.
 - Upgrade lighttpd to 1.4.37.
 - Upgrade samba to 4.2.4.
